2002-03-02  Per Bothner  <per@bothner.com>

	* README:  Remove obsolete file.

	* CodeAttr.java (emitGotoIfCompare2):  ALso allow ifeq and ifne.

2002-02-01  Per Bothner  <per@bothner.com>

	* ClassType.java (sourcefile):  Remove unused field.
	Reported by Daniel Bonniot  <bonniot@users.sourceforge.net>.

2002-01-31  Per Bothner  <per@bothner.com>

	* ClassType.java:  Implement Externalizable.
	(writeExternal, readExternal, readResolve):  New methods.

2002-01-21  Per Bothner  <per@bothner.com>

	* CodeAttr.java (calculateSplit):  New helper method.
	(emitPushString):  Handle the case a String too long for CONSTANT_Utf8.

2002-01-07  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitPushPrimArray):  New method.
	Replaces gnu.expr.LitTable.emitPrimArray.

2001-12-27  Daniel Bonniot  <bonniot@users.sourceforge.net>

	* CodeAttr.java (various):  Replace emitGoto(L, 168) by emitJsr(L).

	* CodeAttr.java (emitReturn): Jump to the finally blocks before return.

2001-12-24  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitPushString):  Tolerate null String argument.

	* CodeAttr.java (emitThen):  New method.

	* package.html:  Remove "http:" from relative URLs.

	* Method.java (toString):  Use getName of declaring class to avoid
	prefixing by "Class Type ".  Fixes bug reported by Daniel Bonniot.

2001-11-23  Per Bothner  <per@bothner.com>

	* ClassType.java  (isSubclass):  Handle other class an interface,
	(compare):  Simplify, due to above change.

	* ClassType.java  (isSubclass):  Special test for tostring_type.
	(compare):  Likewise.
	* ObjectType.java (coerceFromObject):  Allow null when tostring_type.
	(emitCoerceFromObject):  Emit code that tests input for null.

2001-11-21  Per Bothner  <per@bothner.com>

	* ClassType.java (noClasses):  New static field.
	(getInterfaces):  Use getReflectClass().
	Use noClasses when there are no intefaces.
	(getMethods):  Search interface also of super-classes.
	Fixes problem reported by Valtteri Vuorikoski.
